@@ -3,9 +3,13 @@ package me.kumo.ui.stats;
 import com.github.hanshsieh.pixivj.model.Author;
 import com.github.weisj.darklaf.components.OverlayScrollPane;
 import me.kumo.components.piechart.PieChart;
+import me.kumo.io.NetIO;
 
 import javax.swing.*;
 import java.awt.*;
+import java.awt.event.MouseAdapter;
+import java.awt.event.MouseEvent;
+import java.net.URI;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
@@ -39,6 +43,17 @@ public class AuthorMakeup extends JPanel {
 
             }
         }).toList()), BorderLayout.CENTER);
-        add(new OverlayScrollPane(new JList<>(new Vector<>(authors.stream().map(a -> a.getName() + " (" + frequency.get(a) + ")").collect(Collectors.toList()))), JScrollPane.VERTICAL_SCROLLBAR_AS_NEEDED, JScrollPane.HORIZONTAL_SCROLLBAR_NEVER), BorderLayout.EAST);
+        List<Author> finalAuthors = authors;
+        add(new OverlayScrollPane(new JList<>(new Vector<>(authors.stream().map(a -> a.getName() + " (" + frequency.get(a) + ")").toList())) {{
+            addMouseListener(new MouseAdapter() {
+                public void mouseClicked(MouseEvent e) {
+                    if (e.getClickCount() == 2) {
+                        int selectedIndex = getSelectedIndex();
+                        if (selectedIndex != -1)
+                            NetIO.open(URI.create("https://pixiv.net/users/" + finalAuthors.get(selectedIndex).getId()));
+                    }
+                }
+            });
+        }}, JScrollPane.VERTICAL_SCROLLBAR_AS_NEEDED, JScrollPane.HORIZONTAL_SCROLLBAR_NEVER), BorderLayout.EAST);
     }
 }
